[package]
name = "checkr"
version = "0.1.0"
authors = ["Sahil Tembhare <isr.sahil.mk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
rayon = "1.3.1"
